A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)

Bug fixes:
..F....... [ZBX-8355] changed confusing context for date format translations (Andrejs)
..F.I..... [ZBX-7921] fixed default values for screen item colspan/rowspan to 1 in frontend and database (Krists, wiper)
..F....... [ZBX-8288] fixed problems with vertical table headers sometimes being offset (Krists)
...G...... [ZBX-8213] fixed possible crash when processing eventlog on Windows 2000,2003,XP (wiper)
.......PS. [ZBX-8040] wait for proper SMTP response before sending first command (wiper)
..F....... [ZBX-8358] fixed overview screen elements being displayed incorrectly after refreshing (Pavels)
..F....... [ZBX-8196] added validation for sorting parameters (Andrejs)
A.F....... [ZBX-8334] fixed selecting group prototypes in HostPrototype::get() using Oracle backend (Andrejs)
..F....... [ZBX-8320] corrected help item strings by removing double spaces in sentences and "IP" used in uppercase letters (Ivo)
.......PS. [ZBX-8061] fixed VMware cluster functions returning notsupported despite clusters being discovered normally (wiper)
........S. [ZBX-8348] fixed processing of LLD triggers; function references in the trigger expression could be out of order (Sasha)
..F....... [ZBX-8053] changed label "Latest data" to "Monitoring" in host inventory view (Ivo)
..F....... [ZBX-8333] renamed screen item adding, updating and deleting messages (Ivo)
..F....... [ZBX-8197] fixed all data not being shown on a graph if the period is set to or more than 2 years (Krists)
..F....... [ZBX-8330] fixed a bug with grouped buttons in discovery rules for SNMP checks (Andrejs)