@@ -12,6 +12,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian an
 ..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)
 
 Bug fixes:
+.......PS. [ZBX-8324] fixed there being too many expressions in a list in a SQL query (asaveljevs)
 ..F....... [ZBX-8355] changed confusing context for date format translations (Andrejs)
 ..F.I..... [ZBX-7921] fixed default values for screen item colspan/rowspan to 1 in frontend and database (Krists, wiper)
 ..F....... [ZBX-8288] fixed problems with vertical table headers sometimes being offset (Krists)
@@ -211,6 +212,7 @@ Changes for 2.2.5rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-8324] fixed there being too many expressions in a list in a SQL query (asaveljevs)
 ...G...... [ZBX-8373] fixed the argument to system.cpu.num[] being ignored on HP-UX (asaveljevs)
 
 --------------------------------------------------------------------------------
